--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: tdengine/tdengine-beta:latest
+      image: tdengine/tdengine:latest
       options: --user root
       volumes:
         - /etc/apt/sources.list:/etc/apt/sources.list
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.14
+          go-version: 1.22
 
       - name: start taosd
         run: nohup taosd &
