--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,8 +24,8 @@ jobs:
       - name: start taosd
         run: nohup taosd &
 
-      - name: Install build-essential
-        run: apt-get update && apt-get install -y build-essential curl
+      # - name: Install build-essential
+      #   run: apt-get update && apt-get install -y build-essential curl
 
       - name: Build
         run: go build -v ./...
