fix: remove workflow build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,8 +27,8 @@ jobs:
       # - name: Install build-essential
       #   run: apt-get update && apt-get install -y build-essential curl
 
-      - name: Build
-        run: go build -v ./...
+      # - name: Build
+      #   run: go build ./...
 
       - name: Test
-        run: go test -v ./...
+        run: go test ./...
